--- a/lichee/linux-3.10/drivers/input/touchscreen/Makefile
+++ b/lichee/linux-3.10/drivers/input/touchscreen/Makefile
@@ -76,7 +76,7 @@ obj-$(CONFIG_TOUCHSCREEN_GT82X)          += gt82x.o
 #obj-$(CONFIG_INPUT_TOUCHSCREEN)   += gt818/
 #obj-$(CONFIG_INPUT_TOUCHSCREEN)   += gt9xx/
 #obj-$(CONFIG_INPUT_TOUCHSCREEN)   += gt9xxf/
-#obj-$(CONFIG_INPUT_TOUCHSCREEN)    += ft5x/
+obj-$(CONFIG_INPUT_TOUCHSCREEN)    += ft5x/
 #obj-$(CONFIG_INPUT_TOUCHSCREEN)    += gslx680/
 obj-$(CONFIG_INPUT_TOUCHSCREEN)    += gslx680new/
 #obj-$(CONFIG_INPUT_TOUCHSCREEN)    += gt9xxnew/
