Modify BPI-M64-GPIO Permission

--- a/android/device/softwinner/tulip-bpi-m64/init.sun50iw1p1.rc
+++ b/android/device/softwinner/tulip-bpi-m64/init.sun50iw1p1.rc
@@ -48,6 +48,38 @@ on fs
     #init_dev_detect
 
     insmod /system/vendor/modules/gpio-sunxi.ko
+    
+     # BPI-M664-GPIO 
+        chmod 777 /sys/class/gpio_sw/PH3/data
+	chmod 777 /sys/class/gpio_sw/PH2/data
+	chmod 777 /sys/class/gpio_sw/PH6/data
+	chmod 777 /sys/class/gpio_sw/PH7/data
+	chmod 777 /sys/class/gpio_sw/PH10/data
+	chmod 777 /sys/class/gpio_sw/PH11/data
+	chmod 777 /sys/class/gpio_sw/PD2/data
+	chmod 777 /sys/class/gpio_sw/PD3/data
+	chmod 777 /sys/class/gpio_sw/PD1/data
+	chmod 777 /sys/class/gpio_sw/PC4/data
+	chmod 777 /sys/class/gpio_sw/PC7/data
+	chmod 777 /sys/class/gpio_sw/PB5/data
+	chmod 777 /sys/class/gpio_sw/PB4/data
+	chmod 777 /sys/class/gpio_sw/PB6/data
+	chmod 777 /sys/class/gpio_sw/PL12/data
+	chmod 777 /sys/class/gpio_sw/PB0/data
+	chmod 777 /sys/class/gpio_sw/PB1/data
+	chmod 777 /sys/class/gpio_sw/PB3/data
+	chmod 777 /sys/class/gpio_sw/PB2/data
+	chmod 777 /sys/class/gpio_sw/PD4/data
+	chmod 777 /sys/class/gpio_sw/PC0/data
+	chmod 777 /sys/class/gpio_sw/PD0/data
+	chmod 777 /sys/class/gpio_sw/PC2/data
+	chmod 777 /sys/class/gpio_sw/PC3/data
+	chmod 777 /sys/class/gpio_sw/PB7/data
+	chmod 777 /sys/class/gpio_sw/PL9/data
+	chmod 777 /sys/class/gpio_sw/PL7/data
+	chmod 777 /sys/class/gpio_sw/PL8/data
+        chmod 777 /sys/class/gpio_sw/PE14/data
+        chmod 777 /sys/class/gpio_sw/PE15/data
 
 
 	# csi module
@@ -191,18 +223,3 @@ service p2p_supplicant /system/bin/wpa_supplicant \
    socket wpa_wlan0 dgram 660 wifi wifi
    disabled
    oneshot
-
-
-#Justin Porting for WIFI&BT Test Start
-   service wifiservice /data/rftesttool/wifiservice
-            class main
-            user root
-
-   service btservice /data/rftesttool/btservice
-            class main
-            user root
-   
-#Justin Porting for WIFI&BT Test End
-
-
-
