--- a/android/device/softwinner/tulip-bpi-m64/init.sun50iw1p1.rc
+++ b/android/device/softwinner/tulip-bpi-m64/init.sun50iw1p1.rc
@@ -149,6 +149,12 @@ on property:sys.boot_completed=1
     #start engsetmacaddr
     #start engsetbtmacaddr
 
+
+   #Justin 20160817 Porting for BPI-M64-Root Start
+     setenforce 0
+   #Justin 20160817 Porting for BPI-M64-Root End
+
+
 on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
     # bluetooth MAC address programming
