--- a/android/packages/apps/Settings/AndroidManifest.xml
+++ b/android/packages/apps/Settings/AndroidManifest.xml
@@ -244,6 +244,23 @@
                 android:value="true" />
         </activity>
 
+              <activity android:name="Settings$EthernetSettingsActivity"
+                android:taskAffinity=""
+                android:label="@string/ethernet_settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.android.settings.ETHERNET_SETTINGS" />
+                <action android:name="android.settings.ETHERNET_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.ethernet.EthernetSettings" />
+        </activity>
+
+
+
         <activity android:name="Settings$AdvancedWifiSettingsActivity"
                 android:taskAffinity="com.android.settings"
                 android:label="@string/wifi_advanced_settings_label"
