--- a/android/device/softwinner/tulip-bpi-m64/configs/camera.cfg
+++ b/android/device/softwinner/tulip-bpi-m64/configs/camera.cfg
@@ -22,7 +22,7 @@ number_of_camera = 1
 
 ;------------------------------------------------------------------------------- 
 ; CAMERA_FACING_BACK
-; gc2035
+; ov5640
 ;------------------------------------------------------------------------------- 
 camera_id = 0
 
@@ -55,16 +55,16 @@ camera_device = /dev/video0
 device_id = 0
 
 used_preview_size = 1
-key_support_preview_size = 640x480,320x240,176x144
-key_default_preview_size = 640x480
+key_support_preview_size = 1280x720,640x480
+key_default_preview_size = 1280x720
 
 used_picture_size = 1
-key_support_picture_size = 1600x1200,1280x720,640x480,320x240
-key_default_picture_size = 1600x1200
+key_support_picture_size = 1280x720,640x480
+key_default_picture_size = 1280x720
 
 used_flash_mode = 0
 key_support_flash_mode = on,off,auto
-key_default_flash_mode = off
+key_default_flash_mode = on
 
 used_color_effect=1
 key_support_color_effect = none,mono,negative,sepia,aqua
@@ -74,7 +74,7 @@ used_frame_rate = 1
 key_support_frame_rate = 30
 key_default_frame_rate = 30
 
-used_focus_mode = 0
+used_focus_mode = 1
 key_support_focus_mode = auto,infinity,macro,fixed,continuous-video,continuous-picture
 key_default_focus_mode = auto
 
@@ -94,6 +94,13 @@ key_default_exposure_compensation = 0
 
 key_horizonal_view_angle = 48.6
 key_vertical_view_angle = 37.0
+
+used_zoom = 1
+key_zoom_supported = true
+key_smooth_zoom_supported = false
+key_zoom_ratios = 100,120,150,200,230,250,300
+key_max_zoom = 30
+key_default_zoom = 0
 
 ;------------------------------------------------------------------------------- 
 ; CAMERA_FACING_FRONT
