--- a/android/device/softwinner/common/rild/3g_dongle.cfg
+++ b/android/device/softwinner/common/rild/3g_dongle.cfg
@@ -99,3 +99,15 @@ pid_vid_now=0x12d11001
 bcdDevice_now=0x0
 at_port=2
 ppp_port=0
+
+[E3531]
+dongle_name=E3531
+production_name=E3531
+vendor_name=huawei
+network_type=GSM_MODE
+pid_vid_origin=0x12d115ca
+bcdDevice_origin=0x0
+pid_vid_now=0x12d11506
+bcdDevice_now=0x0
+at_port=3
+ppp_port=0
