--- a/android/device/softwinner/bpi-m64-hdmi/init.sun50iw1p1.rc
+++ b/android/device/softwinner/bpi-m64-hdmi/init.sun50iw1p1.rc
@@ -206,6 +206,12 @@ service optee /system/bin/tee_supplicant
     group root
 endif
 
+service ril-daemon /system/bin/rild -l /system/lib/libreference-ril.so
+	class main
+	socket rild stream 660 root radio
+	socket rild-debug stream 666 radio system
+	user root
+	group radio cache inet misc audio sdcard_rw log
 
 # broadcom wifi service
 # 1 broadcom wifi sta service
