--- a/android/device/softwinner/bpi-m64-lcd/init.sun50iw1p1.rc
+++ b/android/device/softwinner/bpi-m64-lcd/init.sun50iw1p1.rc
@@ -229,3 +229,10 @@ service p2p_supplicant /system/bin/wpa_supplicant \
    socket wpa_wlan0 dgram 660 wifi wifi
    disabled
    oneshot
+
+service ril-daemon /system/bin/rild -l /system/lib/libreference-ril.so
+   class main
+   socket rild stream 660 root radio
+   socket rild-debug stream 666 radio system
+   user root
+   group radio cache inet misc audio sdcard_rw log
