--- a/android/device/softwinner/common/rild/3g_dongle.cfg
+++ b/android/device/softwinner/common/rild/3g_dongle.cfg
@@ -52,6 +52,30 @@ cdma2000=ATDT#777
 tdscdma=ATDT*98*1#
 
 
+[EC20]
+dongle_name=EC20
+production_name=EC20
+vendor_name=Bpi4G
+network_type=CDMA_MODE
+pid_vid_origin=0x0
+bcdDevice_origin=0x0
+pid_vid_now=0x05C69215
+bcdDevice_now=0x0
+at_port=2
+ppp_port=3
+
+[EC25]
+dongle_name=EC25
+production_name=EC25
+vendor_name=Bpi4G
+network_type=CDMA_MODE
+pid_vid_origin=0x0
+bcdDevice_origin=0x0
+pid_vid_now=0x2C7C0125
+bcdDevice_now=0x0
+at_port=2
+ppp_port=3
+
 [E1750]
 dongle_name=E1750
 production_name=E1750
