add 4g network option

--- a/lichee/tools/pack/chips/sun50iw1p1/configs/default/env.cfg
+++ b/lichee/tools/pack/chips/sun50iw1p1/configs/default/env.cfg
@@ -8,7 +8,8 @@ mmc_root=/dev/mmcblk0p7
 init=/init
 loglevel=7
 cma=256M
-selinux=enforcing
+#selinux=enforcing
+selinux=disabled
 #set kernel cmdline if boot.img or recovery.img has no cmdline we will use this
 setargs_nand=setenv bootargs earlyprintk=${earlyprintk} initcall_debug=${initcall_debug} console=${console} loglevel=${loglevel} root=${nand_root} init=${init} partitions=${partitions} cma=${cma} androidboot.selinux=${selinux}
 setargs_mmc=setenv  bootargs earlyprintk=${earlyprintk} initcall_debug=${initcall_debug} console=${console} loglevel=${loglevel} root=${mmc_root}  init=${init} partitions=${partitions} cma=${cma} androidboot.selinux=${selinux}
